# adv_prog_tech

./: .gitignore
final/: .gitignore  CMakeLists.txt  main.cpp
final/utils/: objloader.cpp
lab0/: testProgram  testProgram.cc
lab1/: Lab1_Helper.h  Lab1_Problem1.cpp  Lab1_Problem2.cpp  Lab1_Problem3.cpp  helper.h  ray_tracing.py
lab2/: Lab2_Problem1.cpp  Lab2_Problem2.cpp  Makefile
lab3/: Makefile  main.cpp
lab4/: Makefile  client.cpp  server.cpp
lab5/: HeatConduction.cu
